# Satelite_Ardupilot_Gazebo

./: README.md
ros2_ws/: mav.parm  mav.tlog  mav.tlog.raw  mav_0_1.parm
ros2_ws/src/ardupilot/: .lock-waf_linux_build  tasklist.json
ros2_ws/src/ardupilot/ArduCopter/: mav.parm  mav.tlog  mav.tlog.raw
ros2_ws/src/ardupilot/Tools/ros2/ardupilot_dds_tests/: mav.parm  mav.tlog  mav.tlog.raw
ros2_ws/src/ardupilot/modules/gtest/googletest/src/: gtest-death-test.cc
ros2_ws/src/ardupilot/modules/lwip/src/core/: netif.c
ros2_ws/src/ardupilot/modules/waf/: ChangeLog  waf-light  wscript
ros2_ws/src/ardupilot/modules/waf/waflib/: Build.py  Node.py  Task.py
ros2_ws/src/ardupilot/modules/waf/waflib/Tools/: c_config.py
ros2_ws/src/ardupilot_gazebo/models/gimbal_small_2d/: model.sdf
ros2_ws/src/ardupilot_gazebo/models/runway/: model.sdf
ros2_ws/src/ardupilot_gazebo/models/runway/meshes/: map.dae  map2.dae
ros2_ws/src/ardupilot_gazebo/worlds/: static_map_plugin.sdf  static_map_plugin.world
ros2_ws/src/ardupilot_gz/ardupilot_gz_gazebo/worlds/: iris_runwaymodified.sdf
ros2_ws/src/ardupilot_ros/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ardupilot_ros/ardupilot_ros/: joy_controller.py
ros2_ws/src/ardupilot_ros/config/: cartographer.lua
ros2_ws/src/ardupilot_ros/launch/: cartographer.launch.py  main.launch
ros2_ws/src/ardupilot_ros/params/: trajectory_planner.yaml
ros2_ws/src/ardupilot_ros/rviz/: cartographer.rviz
ros2_ws/src/ardupilot_ros/scripts/: set_origin.py
ros2_ws/src/ros_gz/ros_gz_bridge/src/: service_factory_interface.hpp
(+8 files in other folders)
