<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardupilot_ros</name>
  <version>0.0.0</version>
  <description>The ardupilot ROS 2 use cases package</description>
  <maintainer email="pedrofuoco6@gmail.com">Pedro Fuoco</maintainer>
  <license>GPLv3+</license>
  <exec_depend>pynput-pip</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ardupilot_gz_description</exec_depend>
  <exec_depend>ardupilot_gz_gazebo</exec_depend>
  <exec_depend>ardupilot_sitl</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
